# PDFSplitter

./: .gitignore  Dockerfile  INSTALL.md  PDF_Splitter_API.postman_collection.json  README.md  app.py  main.py  postman_examples.md  pyproject.toml  replit.md  requirements.txt
attached_assets/: executar_1750169680488.py
static/js/: app.js
templates/: index.html
