[project]
name = "pdf-splitter-fastapi"
version = "0.1.0"
description = "PDF Splitter and HTML to PDF converter built with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "xhtml2pdf>=0.2.17",
    "jinja2>=3.1.4",
    "python-jose[cryptography]>=3.3.0",
]
